<resources>
    <string name="app_name">ProfileGithubSearcher</string>
    <string name="searchbar_hint">Search Users</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="first_tab">Followers</string>
    <string name="second_tab">Following</string>
    <string name="user_not_follow">User are not followers of anyone</string>
    <string name="username">Ini adalah text sangat panjang</string>
    <string name="user_has_no_followers">User has no followers</string>
    <string name="followers">Followers</string>
    <string name="lorem_ipsum_dolor_emit_acunstant_sein_adiuvat">Lorem Ipsum dolor emit acunstant sein adiuvat</string>
    <string name="following">Following</string>
    <string name="repos">repos</string>
    <string name="deepsyy">DeepSyy</string>
    <string name="no_users_found">No users found</string>
    <string name="favorite">favorite</string>
    <string name="dark_mode">Dark Mode</string>
</resources>