<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.DetailUserActivity">

    <include
        android:id="@+id/appbar"
        layout="@layout/back_appbar"/>



    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_marginBottom="8dp"
        android:layout_height="wrap_content">

        <ProgressBar
            android:id="@+id/pb_loading"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:visibility="visible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/iv_avatar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="16dp"
            android:layout_width="100dp"
            android:layout_height="100dp"
            tools:src="@tools:sample/avatars"
            app:shapeAppearanceOverlay="@style/ShapeAppearance.Material3.Corner.Large"/>
        />

        <TextView
            android:id="@+id/tv_username"
            app:layout_constraintStart_toEndOf="@+id/iv_avatar"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="16dp"
            android:layout_width="0dp"
            android:textStyle="bold"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/username"/>

        <TextView
            android:id="@+id/tv_login"
            app:layout_constraintStart_toEndOf="@+id/iv_avatar"
            app:layout_constraintTop_toBottomOf="@+id/tv_username"
            android:layout_width="wrap_content"
            android:text="@string/deepsyy"
            android:layout_marginTop="4dp"
            android:layout_marginStart="16dp"
            android:visibility="gone"
            android:textSize="16sp"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tv_bio"
            android:layout_marginTop="4dp"
            app:layout_constraintStart_toEndOf="@+id/iv_avatar"
            app:layout_constraintTop_toBottomOf="@+id/tv_login"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="16dp"
            android:layout_width="0dp"
            android:textSize="14sp"
            android:layout_height="wrap_content"
            android:text="@string/lorem_ipsum_dolor_emit_acunstant_sein_adiuvat"/>

        <TextView
            android:id="@+id/tv_followers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toEndOf="@+id/iv_avatar"
            app:layout_constraintTop_toBottomOf="@+id/tv_bio"
            android:text="@string/followers"
            android:drawablePadding="4dp"
            app:drawableStartCompat="@drawable/ic_followers"
            app:drawableTint="?attr/colorPrimary" />

        <TextView
            android:id="@+id/tv_following"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toEndOf="@+id/tv_followers"
            app:layout_constraintTop_toBottomOf="@+id/tv_bio"
            android:text="@string/following"
            android:drawablePadding="4dp"
            app:drawableStartCompat="@drawable/ic_following"
            app:drawableTint="?attr/colorPrimary"/>

        <TextView
            android:id="@+id/tv_public_repos"
            app:layout_constraintStart_toEndOf="@+id/iv_avatar"
            app:layout_constraintTop_toBottomOf="@+id/tv_followers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:drawableStartCompat="@drawable/baseline_book_24"
            android:layout_marginTop="8dp"
            android:drawablePadding="4dp"
            android:text="@string/repos"
            android:layout_marginStart="16dp"
            app:drawableTint="?attr/colorPrimary"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    
    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        app:tabTextColor="@color/white"/>
    
    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</LinearLayout>